--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ addons:
   apt:
     packages:
       - gfortran
+      - libgfortran3
       - libhdf5-serial-dev
       - libnetcdf-dev
       - liblapack-dev
@@ -17,7 +18,7 @@ before_install:
   - export PATH=/home/travis/miniconda/bin:$PATH
   - conda update --yes conda
 install:
-  - conda create --yes -q -n pyenv mkl python=2.7 numpy=1.9.1 scipy=0.14.0 nose=1.3.7 sphinx=1.3
+  - conda create --yes -q -n pyenv mkl python=2.7 numpy=1.9.2 scipy=0.16.0 nose=1.3.7 sphinx=1.3
   - source activate pyenv
   - conda install --yes python=$TRAVIS_PYTHON_VERSION cython biopython matplotlib networkx netcdf4
   - pip install package/
